[project]
name = "geo-skeletons"
version = "0.19.1"
description = "Easily extended way to build classes for structured and unstructured geophysical data."
authors = [ { name = "Jan-Victor Björkqvist", email = "janvb@met.no" } ]
dependencies = [ "python>=3.9<3.12", "numpy", "scipy", "xarray", "pandas", "utm", "geopy", "dask", "geo-parameters>=0.8.2" ]
readme = "README.md"

#[project.optional-dependencies]
#tests = [ "numpy", "xarray", "pandas", "utm", "geopy"]

[project.urls]
repository = "http://github.com/bjorkqvi/skeletons"

# [project.scripts]
# "sfydata" = "sfy.cli.sfydata:sfy"
