[project]
name = "geo-skeletons"
version = "0.21.0"
description = "Easily extended way to build classes for structured and unstructured geophysical data."
authors = [ { name = "Jan-Victor Björkqvist", email = "janvb@met.no" } ]
dependencies = [ "numpy", "scipy", "xarray", "pandas", "utm", "geopy", "dask", "geo-parameters>=0.10.0" ]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
repository = "http://github.com/bjorkqvi/skeletons"

